// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Emoji 1`] = `
<button
  className="sc-bdVaJa eBZPoX"
>
  oh gosh
  <img
    alt=""
    src="test-file-stub"
    style={
      Object {
        "height": "20px",
      }
    }
  />
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯 blah
  </span>
</button>
`;

exports[`Storyshots Button With Text 1`] = `
<button
  className="sc-bdVaJa eBZPoX"
>
  oh gosh
  <img
    alt=""
    src="test-file-stub"
    style={
      Object {
        "height": "20px",
      }
    }
  />
  Hello Button
</button>
`;

exports[`Storyshots Header With Demo Data 1`] = `
<header>
  <li>
    Watch
  </li>
  <li>
    Explore
  </li>
  <li>
    Make
  </li>
  <li>
    Education
  </li>
  <li>
    About
  </li>
  <li>
    Support
  </li>
</header>
`;
